<resources>
    <string name="action_settings">Cài đặt</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="title_activity_refuel">Tra nạp</string>
    <string name="save">Lưu</string>
    <string name="save_setting">Lưu lài đặt</string>
    <string name="cancel">Bỏ qua</string>
    <string name="back">Trở lại</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="lcr_ip_address">Địa chỉ IP Đồng hồ</string>
    <string name="connection_check">Kiểm tra kết nối LCR</string>
    <string name="lcr_connection_error">Lỗi kết nối thiết bị LCR</string>
    <string name="lcr_connection_ok">Kết nối thiết bị thành công</string>
    <string name="meter_data_stale">Đồng hồ không gửi số — số đang hiển thị là số cũ</string>
    <string name="setting">Cài đặt</string>
    <string name="refuel">Tra nạp</string>
    <string name="fuelUplift">Lượng nhiên liệu tra nạp</string>
    <string name="fuelUpliftUSG">Lượng nhiên liệu tra nạp USG</string>
    <string name="refuel_check">Kiểm tra</string>
    <string name="start">Bắt đầu</string>
    <string name="pause">Tạm dừng</string>
    <string name="stop">Kết thúc</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="logout">Thoát</string>
    <string name="exit">Thoát</string>
    <string name="logout_message">Bạn có muốn thoát khỏi ứng dụng?</string>
    <string name="invoice">Hóa đơn</string>
    <string name="add_inventory">25.02</string>
    <string name="title_refuelitem_list">Items</string>
    <string name="title_refuelitem_detail">RefuelItem Detail</string>
    <string name="extract">Hút nhiên liệu</string>
    <string name="refuel_list">Danh sách tra nạp</string>
    <string name="print_order">In mẻ hiện tại</string>
    <string name="detail_info">Thông tin chi tiết</string>
    <string name="current_amount">Lượng nhiên liệu hiện tại</string>
    <string name="refuel_item_already_fueled">Mẻ tra nạp đã thực hiện xong</string>
    <string name="login_error_message">Lỗi đăng nhập! Sai tên đăng nhập hoặc mật khẩu</string>
    <string name="refuel_mannual_temperature">Nhiệt độ thực tế</string>
    <string name="start_meter">Số đồng hồ bắt đầu</string>
    <string name="flightCode">Mã chuyến bay</string>
    <string name="flightNo">Số hiệu chuyến bay</string>
    <string name="aircraftCode">Số hiệu tàu bay</string>
    <string name="parkingLot">Bãi đỗ</string>
    <string name="density">Tỷ trọng</string>
    <string name="amount">Lượng nhiên liệu</string>
    <string name="update_aircraftCode">Sửa số hiệu tàu bay</string>
    <string name="update_density">Cập nhật tỷ trọng</string>
    <string name="update_temparature">Cập nhật nhiệt độ</string>
    <string name="startTime">Giờ bắt đầu tra nạp</string>
    <string name="endTime">Giờ kết thúc tra nạp</string>
    <string name="end">Kết thúc</string>
    <string name="close">Trở về</string>
    <string name="dialog_update_refuel">Cập nhật thông tin tra nạp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="printer_address">Địa chỉ IP máy in</string>
    <string name="lcr_device_connect">Kết nối thiết bị LCR</string>
    <string name="edit_refuel">Sửa thông tin</string>
    <string name="menu">Chức năng</string>
    <string name="detail">Chi tiết</string>
    <string name="lcr_connection_connecting">Đang kết nối thiết bị LCR</string>
    <string name="others">Khác</string>
    <string name="imei_list">353700094068846,353700094064027</string>
    <string name="update_list">Cập nhật K.hoạch</string>
    <string name="real_amount">Sản lượng thực tế</string>
    <string name="refuel_start">Giờ bắt đầu tra nạp</string>
    <string name="refuel_end">Giờ kết thúc tra nạp</string>
    <string name="touch_to_edit"><i>Chạm để sửa</i></string>
    <string name="truck_no">Số xe</string>
    <string name="update_version">Cập nhật phiên bản mới</string>
    <string name="route_name">Đường bay</string>
    <string name="restart_app">Khởi động lại ứng dụng</string>
    <string name="flight_code">Mã chuyến bay</string>
    <string name="internet_status">Trạng thái 3G</string>
    <string name="send_log">Gửi file log</string>
    <string name="time">Thời gian</string>
    <string name="appearance_check">Kiểm tra ngoại quan</string>
    <string name="other">Khác</string>
    <string name="receipt_number">Số phiếu</string>
    <string name="receipt_list">Danh sách receipts</string>
    <string name="customer_code">Mã khách hàng</string>
    <string name="receipt_date">Ngày tạo phiếu</string>
    <string name="sync_status">Trạng thái</string>
    <string name="note">Ghi chú</string>
    <string name="printer_test">Thử máy in</string>
    <string name="printer_factory">Factory máy in</string>
    <string name="rut_menu_title">Trạng thái Router RUT</string>
    <string name="bm2509_title">Phiếu kiểm tra đối chứng nhiên liệu JET A-1 trên xe tra nạp</string>
    <string name="bm2509_flight_no">Chuyến bay (Flight No.)</string>
    <string name="bm2509_ac_reg">Tàu bay (A.C regit.)</string>
    <string name="bm2509_last_refuel">Chuyến tra nạp trước</string>
    <string name="bm2509_last_tank">Bể cấp hàng gần nhất</string>
    <string name="bm2509_apron">Đo tại sân đỗ cho lần tra nạp này</string>
    <string name="bm2509_doc_no">[1] Số chứng từ</string>
    <string name="bm2509_last_density15">[2] KLR ở 15°C</string>
    <string name="bm2509_remain_qty">[3] Lượng NL còn lại trên xe</string>
    <string name="bm2509_cert_no">[4] Số CNXH</string>
    <string name="bm2509_tank_density15">[5] KLR ở 15°C</string>
    <string name="bm2509_load_qty">[6] Lượng NL cấp lên xe</string>
    <string name="bm2509_avg_density">[7] KLR trung bình</string>
    <string name="bm2509_temperature">[8] Nhiệt độ quan sát (°C)</string>
    <string name="bm2509_density">[9] KLR quan sát</string>
    <string name="bm2509_density15">[10] KLR ở 15°C</string>
    <string name="bm2509_density_diff">[11] Chênh lệch KLR</string>
</resources>