<?xml version="1.0" encoding="utf-8"?>
<!-- BM 25.09/NLHK - Phiếu kiểm tra đối chứng nhiên liệu JET A-1 trên xe tra nạp -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.megatech.fms.helpers.DateUtils" />

        <import type="com.megatech.fms.model.BM2509Model" />

        <import type="android.view.View" />

        <variable
            name="mItem"
            type="com.megatech.fms.model.BM2509Model" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary"
            android:gravity="end">

            <Button
                android:id="@+id/bm_new_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_exit"
                android:text="@string/back" />

            <TextView
                style="?android:attr/textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bm2509_title"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/bm_new_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:text="@string/save" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/BMFormSection"
                    android:background="#ffdddd"
                    android:text="@{mItem.syncError}"
                    android:textColor="#b00020"
                    android:visibility="@{mItem.syncError == null ? View.GONE : View.VISIBLE}" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/time" />

                    <TextView
                        android:id="@+id/b2509_time"
                        style="@style/BMFormValue"
                        android:text='@{DateUtils.formatDate(mItem.time,"HH:mm dd/MM/yyyy")}' />

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_flight_no" />

                    <TextView
                        android:id="@+id/b2509_flight"
                        style="@style/BMFormValue"
                        android:text='@{mItem.flightNo}' />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#efefef"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_ac_reg" />

                    <TextView
                        android:id="@+id/b2509_ac_reg"
                        style="@style/BMFormValue"
                        android:text="@{mItem.acReg}" />

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/appearance_check" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".25"
                        android:orientation="vertical">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/b2509_appearance_cb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{!Boolean.FALSE.equals(mItem.appearanceCheck)}"
                                android:text="C&amp;B" />

                            <RadioButton
                                android:id="@+id/b2509_appearance_other"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="@{Boolean.FALSE.equals(mItem.appearanceCheck)}"
                                android:text="@string/other" />
                        </RadioGroup>

                        <TextView
                            android:id="@+id/b2509_appearance"
                            style="?android:attr/textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_edit"
                            android:hint="@string/touch_to_edit"
                            android:padding="5dp"
                            android:text="@{mItem.appearanceOther}"
                            android:visibility="@{Boolean.FALSE.equals(mItem.appearanceCheck) ? View.VISIBLE : View.GONE}" />
                    </LinearLayout>
                </TableRow>

                <TextView
                    style="@style/BMFormSection"
                    android:text="@string/bm2509_last_refuel" />
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_doc_no" />

                    <TextView
                        android:id="@+id/b2509_doc_no"
                        style="@style/BMFormValue"
                        android:text='@{mItem.documentNo}' />

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_last_density15" />

                    <TextView
                        android:id="@+id/b2509_last_density15"
                        style="@style/BMFormValue"
                        android:text='@{BM2509Model.num(mItem.lastDensity15)}' />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#efefef"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_remain_qty" />

                    <TextView
                        android:id="@+id/b2509_remain_qty"
                        style="@style/BMFormValue"
                        android:text='@{BM2509Model.num(mItem.remainQuantity)}' />
                </TableRow>

                <TextView
                    style="@style/BMFormSection"
                    android:text="@string/bm2509_last_tank" />
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_cert_no" />

                    <TextView
                        android:id="@+id/b2509_cert_no"
                        style="@style/BMFormValue"
                        android:text='@{mItem.releaseCertNo}' />

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_tank_density15" />

                    <TextView
                        android:id="@+id/b2509_tank_density15"
                        style="@style/BMFormValue"
                        android:text='@{BM2509Model.num(mItem.tankDensity15)}' />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#efefef"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_load_qty" />

                    <TextView
                        android:id="@+id/b2509_load_qty"
                        style="@style/BMFormValue"
                        android:text='@{BM2509Model.num(mItem.loadQuantity)}' />

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_avg_density" />

                    <TextView
                        android:id="@+id/b2509_avg_density"
                        style="@style/BMFormLabel"
                        android:text='@{BM2509Model.num(mItem.averageDensity)}' />
                </TableRow>

                <TextView
                    style="@style/BMFormSection"
                    android:text="@string/bm2509_apron" />
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_temperature" />

                    <TextView
                        android:id="@+id/b2509_temperature"
                        style="@style/BMFormValue"
                        android:text='@{BM2509Model.num(mItem.obsTemperature)}' />

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_density" />

                    <TextView
                        android:id="@+id/b2509_density"
                        style="@style/BMFormValue"
                        android:text='@{BM2509Model.num(mItem.obsDensity)}' />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#efefef"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_density15" />

                    <TextView
                        android:id="@+id/b2509_density15"
                        style="@style/BMFormValue"
                        android:text='@{BM2509Model.num(mItem.density15)}' />

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/bm2509_density_diff" />

                    <TextView
                        android:id="@+id/b2509_density_diff"
                        style="@style/BMFormLabel"
                        android:text='@{BM2509Model.num(mItem.densityDiff)}' />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:padding="5dp">

                    <TextView
                        style="@style/BMFormLabel"
                        android:text="@string/note" />

                    <TextView
                        android:id="@+id/b2509_note"
                        style="@style/BMFormValue"
                        android:text='@{mItem.note}' />
                </TableRow>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
